--- a/index.html
+++ b/index.html
@@ -348,6 +348,9 @@ button:hover {
                 <img src="BACKGROUNDS/97.PNG" alt="Grey" onclick="selectTrait('background', 'BACKGROUNDS/97.PNG')">
                 <img src="BACKGROUNDS/98.PNG" alt="Grey" onclick="selectTrait('background', 'BACKGROUNDS/98.PNG')">
                 <img src="BACKGROUNDS/99.PNG" alt="Grey" onclick="selectTrait('background', 'BACKGROUNDS/99.PNG')">
+                <img src="BACKGROUNDS/100.PNG" alt="Grey" onclick="selectTrait('background', 'BACKGROUNDS/100.PNG')">
+                <img src="BACKGROUNDS/101.PNG" alt="Grey" onclick="selectTrait('background', 'BACKGROUNDS/101.PNG')">
+
 
 
 
@@ -477,69 +480,86 @@ button:hover {
                 <img src="MOUTH/23.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/23.PNG')">
                 <img src="MOUTH/24.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/24.PNG')">
                 <img src="MOUTH/25.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/25.PNG')">
+                <img src="MOUTH/92.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/92.PNG')">
                 <img src="MOUTH/26.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/26.PNG')">
                 <img src="MOUTH/27.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/27.PNG')">
                 <img src="MOUTH/28.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/28.PNG')">
                 <img src="MOUTH/29.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/29.PNG')">
                 <img src="MOUTH/30.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/30.PNG')">
+                <img src="MOUTH/93.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/93.PNG')">
                 <img src="MOUTH/31.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/31.PNG')">
                 <img src="MOUTH/32.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/32.PNG')">
                 <img src="MOUTH/33.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/33.PNG')">
+                <img src="MOUTH/94.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/94.PNG')">
                 <img src="MOUTH/34.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/34.PNG')">
                 <img src="MOUTH/35.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/35.PNG')">
                 <img src="MOUTH/36.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/36.PNG')">
                 <img src="MOUTH/37.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/37.PNG')">
                 <img src="MOUTH/38.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/38.PNG')">
+                <img src="MOUTH/95.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/95.PNG')">
                 <img src="MOUTH/39.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/39.PNG')">
                 <img src="MOUTH/40.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/40.PNG')">
                 <img src="MOUTH/41.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/41.PNG')">
+                <img src="MOUTH/96.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/96.PNG')">
                 <img src="MOUTH/42.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/42.PNG')">
                 <img src="MOUTH/43.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/43.PNG')">
                 <img src="MOUTH/44.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/44.PNG')">
                 <img src="MOUTH/45.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/45.PNG')">
                 <img src="MOUTH/46.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/46.PNG')">
+                <img src="MOUTH/97.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/97.PNG')">
                 <img src="MOUTH/47.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/47.PNG')">
                 <img src="MOUTH/48.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/48.PNG')">
                 <img src="MOUTH/49.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/49.PNG')">
+                <img src="MOUTH/98.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/98.PNG')">
                 <img src="MOUTH/50.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/50.PNG')">
                 <img src="MOUTH/51.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/51.PNG')">
                 <img src="MOUTH/52.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/52.PNG')">
                 <img src="MOUTH/53.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/53.PNG')">
                 <img src="MOUTH/54.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/54.PNG')">
+                <img src="MOUTH/99.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/99.PNG')">
                 <img src="MOUTH/55.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/55.PNG')">
                 <img src="MOUTH/56.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/56.PNG')">
                 <img src="MOUTH/57.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/57.PNG')">
+                <img src="MOUTH/100.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/100.PNG')">
                 <img src="MOUTH/58.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/58.PNG')">
                 <img src="MOUTH/59.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/59.PNG')">
                 <img src="MOUTH/60.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/60.PNG')">
                 <img src="MOUTH/61.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/61.PNG')">
                 <img src="MOUTH/62.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/62.PNG')">
+                <img src="MOUTH/101.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/101.PNG')">
                 <img src="MOUTH/63.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/63.PNG')">
                 <img src="MOUTH/64.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/64.PNG')">
                 <img src="MOUTH/65.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/65.PNG')">
+                <img src="MOUTH/102.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/102.PNG')">
                 <img src="MOUTH/66.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/66.PNG')">
                 <img src="MOUTH/67.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/67.PNG')">
                 <img src="MOUTH/68.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/68.PNG')">
                 <img src="MOUTH/69.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/69.PNG')">
                 <img src="MOUTH/70.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/70.PNG')">
+                <img src="MOUTH/103.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/103.PNG')">
                 <img src="MOUTH/71.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/71.PNG')">
                 <img src="MOUTH/72.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/72.PNG')">
                 <img src="MOUTH/73.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/73.PNG')">
+                <img src="MOUTH/104.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/104.PNG')">
                 <img src="MOUTH/74.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/74.PNG')">
                 <img src="MOUTH/75.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/75.PNG')">
                 <img src="MOUTH/76.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/76.PNG')">
                 <img src="MOUTH/77.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/77.PNG')">
                 <img src="MOUTH/78.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/78.PNG')">
+                <img src="MOUTH/105.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/105.PNG')">
                 <img src="MOUTH/79.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/79.PNG')">
                 <img src="MOUTH/80.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/80.PNG')">
                 <img src="MOUTH/81.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/81.PNG')">
+                <img src="MOUTH/106.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/106.PNG')">
                 <img src="MOUTH/82.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/82.PNG')">
                 <img src="MOUTH/83.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/83.PNG')">
                 <img src="MOUTH/84.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/84.PNG')">
                 <img src="MOUTH/85.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/85.PNG')">
                 <img src="MOUTH/86.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/86.PNG')">
+                <img src="MOUTH/107.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/107.PNG')">
                 <img src="MOUTH/87.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/87.PNG')">
                 <img src="MOUTH/88.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/88.PNG')">
+                <img src="MOUTH/108.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/108.PNG')">
                 <img src="MOUTH/89.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/89.PNG')">
                 <img src="MOUTH/90.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/90.PNG')">
                 <img src="MOUTH/91.PNG" alt="Happy 1" onclick="selectTrait('mouth', 'MOUTH/91.PNG')">
@@ -590,9 +610,20 @@ button:hover {
 <img src="HAIR/38.PNG" alt="Hair" onclick="selectTrait('hair', 'HAIR/38.PNG')">
 <img src="HAIR/39.PNG" alt="Hair" onclick="selectTrait('hair', 'HAIR/39.PNG')">
 <img src="HAIR/40.PNG" alt="Hair" onclick="selectTrait('hair', 'HAIR/40.PNG')">
+<img src="HAIR/66.PNG" alt="Hair" onclick="selectTrait('hair', 'HAIR/66.PNG')">
+<img src="HAIR/67.PNG" alt="Hair" onclick="selectTrait('hair', 'HAIR/67.PNG')">
+<img src="HAIR/68.PNG" alt="Hair" onclick="selectTrait('hair', 'HAIR/68.PNG')">
+<img src="HAIR/69.PNG" alt="Hair" onclick="selectTrait('hair', 'HAIR/69.PNG')">
+<img src="HAIR/70.PNG" alt="Hair" onclick="selectTrait('hair', 'HAIR/70.PNG')">
+<img src="HAIR/71.PNG" alt="Hair" onclick="selectTrait('hair', 'HAIR/71.PNG')">
+<img src="HAIR/72.PNG" alt="Hair" onclick="selectTrait('hair', 'HAIR/72.PNG')">
+<img src="HAIR/73.PNG" alt="Hair" onclick="selectTrait('hair', 'HAIR/73.PNG')">
+<img src="HAIR/74.PNG" alt="Hair" onclick="selectTrait('hair', 'HAIR/74.PNG')">
+<img src="HAIR/75.PNG" alt="Hair" onclick="selectTrait('hair', 'HAIR/75.PNG')">
 <img src="HAIR/41.PNG" alt="Hair" onclick="selectTrait('hair', 'HAIR/41.PNG')">
 <img src="HAIR/42.PNG" alt="Hair" onclick="selectTrait('hair', 'HAIR/42.PNG')">
 <img src="HAIR/43.PNG" alt="Hair" onclick="selectTrait('hair', 'HAIR/43.PNG')">
+<img src="HAIR/43A.PNG" alt="Hair" onclick="selectTrait('hair', 'HAIR/43A.PNG')">
 <img src="HAIR/44.PNG" alt="Hair" onclick="selectTrait('hair', 'HAIR/44.PNG')">
 <img src="HAIR/45.PNG" alt="Hair" onclick="selectTrait('hair', 'HAIR/45.PNG')">
 <img src="HAIR/46.PNG" alt="Hair" onclick="selectTrait('hair', 'HAIR/46.PNG')">
@@ -615,7 +646,12 @@ button:hover {
 <img src="HAIR/63.PNG" alt="Hair" onclick="selectTrait('hair', 'HAIR/63.PNG')">
 <img src="HAIR/64.PNG" alt="Hair" onclick="selectTrait('hair', 'HAIR/64.PNG')">
 <img src="HAIR/65.PNG" alt="Hair" onclick="selectTrait('hair', 'HAIR/65.PNG')">
-<img src="HAIR/66.PNG" alt="Hair" onclick="selectTrait('hair', 'HAIR/66.PNG')">
+<img src="HAIR/76.PNG" alt="Hair" onclick="selectTrait('hair', 'HAIR/76.PNG')">
+<img src="HAIR/77.PNG" alt="Hair" onclick="selectTrait('hair', 'HAIR/77.PNG')">
+<img src="HAIR/78.PNG" alt="Hair" onclick="selectTrait('hair', 'HAIR/78.PNG')">
+<img src="HAIR/79.PNG" alt="Hair" onclick="selectTrait('hair', 'HAIR/79.PNG')">
+<img src="HAIR/80.PNG" alt="Hair" onclick="selectTrait('hair', 'HAIR/80.PNG')">
+<img src="HAIR/100.PNG" alt="Hair" onclick="selectTrait('hair', 'HAIR/100.PNG')">
 
 
 
@@ -766,6 +802,7 @@ button:hover {
 <img src="CLOTHING/137.PNG" alt="CLOTHING" onclick="selectTrait('clothing', 'CLOTHING/137.PNG')">
 <img src="CLOTHING/138.PNG" alt="CLOTHING" onclick="selectTrait('clothing', 'CLOTHING/138.PNG')">
 <img src="CLOTHING/139.PNG" alt="CLOTHING" onclick="selectTrait('clothing', 'CLOTHING/139.PNG')">
+<img src="CLOTHING/140.PNG" alt="CLOTHING" onclick="selectTrait('clothing', 'CLOTHING/140.PNG')">
 
 
 
@@ -806,6 +843,8 @@ button:hover {
 <img src="GLASSES/22.PNG" alt="GLASSES" onclick="selectTrait('accessories', 'GLASSES/22.PNG')">
 <img src="GLASSES/23.PNG" alt="GLASSES" onclick="selectTrait('accessories', 'GLASSES/23.PNG')">
 <img src="GLASSES/24.PNG" alt="GLASSES" onclick="selectTrait('accessories', 'GLASSES/24.PNG')">
+<img src="GLASSES/25.PNG" alt="GLASSES" onclick="selectTrait('accessories', 'GLASSES/25.PNG')">
+
 
 
 
@@ -1115,6 +1154,8 @@ button:hover {
 <img src="HANDITEM2/16.PNG" alt="HANDITEM" onclick="selectTrait('ball', 'HANDITEM2/16.PNG')">
 <img src="HANDITEM2/17.PNG" alt="HANDITEM" onclick="selectTrait('ball', 'HANDITEM2/17.PNG')">
 <img src="HANDITEM2/18.PNG" alt="HANDITEM" onclick="selectTrait('ball', 'HANDITEM2/18.PNG')">
+<img src="HANDITEM2/19.PNG" alt="HANDITEM" onclick="selectTrait('ball', 'HANDITEM2/19.PNG')">
+
 
 
 
@@ -1155,7 +1196,7 @@ function getImagePath(folder, index) {
 
 function randomizeCharacter() {
   // ---- BASE TRAITS ---- //
-  const backgroundIndex = getRandomIndex(99);
+  const backgroundIndex = getRandomIndex(101);
   selectTrait('background', getImagePath('BACKGROUNDS', backgroundIndex));
 
   // FIXED: folder name must match your thumbnails (no space)
@@ -1168,15 +1209,15 @@ function randomizeCharacter() {
   const eyesIndex = getRandomIndex(32);
   selectTrait('eyes', getImagePath('EYES', eyesIndex));
 
-  const mouthIndex = getRandomIndex(91);
+  const mouthIndex = getRandomIndex(108);
   selectTrait('mouth', getImagePath('MOUTH', mouthIndex));
 
-  const clothingIndex = getRandomIndex(139);
+  const clothingIndex = getRandomIndex(140);
   selectTrait('clothing', getImagePath('CLOTHING', clothingIndex));
 
   // ---- HAIR / HAT ---- //
   if (Math.random() < 0.5) {
-    selectTrait('hair', getImagePath('HAIR', getRandomIndex(66)));
+    selectTrait('hair', getImagePath('HAIR', getRandomIndex(82)));
     selectTrait('hat', '');
   } else {
     // You list up to 122 hats in the picker; safe upper bound:
@@ -1202,7 +1243,7 @@ function randomizeCharacter() {
     selectTrait('ball', getImagePath('HANDITEM', getRandomIndex(15)));
   } else if (handCombo === 1) {
     selectTrait('hand2', getImagePath('HANDS2', skinIndex));
-    selectTrait('ball2', getImagePath('HANDITEM2', getRandomIndex(18)));
+    selectTrait('ball2', getImagePath('HANDITEM2', getRandomIndex(19)));
   }
 }
 
