--- a/index.html
+++ b/index.html
@@ -2075,55 +2075,65 @@ function randomizeCharacter() {
   var ball2List = ball2ListRaw.filter(function (t) { return !isBlankHand(t.image); });
   var allBalls = (TRAIT_DATA.ball || []).filter(function (t) { return !isBlankHand(t.image); });
   var allBalls2 = (TRAIT_DATA.ball2 || []).filter(function (t) { return !isBlankHand(t.image); });
-  // Hand 1 + Ball 1: same logic as before
+  // Both Hand 1 and Hand 2 MUST match skin number exactly (e.g., skin 3 = HANDS/3.PNG or HANDS2/3.PNG)
   var handCombo = Math.floor(Math.random() * 3);
-  if (handCombo === 0 && skinIndex && skinTrait) {
-    var handPool = handList.length > 0 ? handList : allHands;
-    var handTrait = handPool.find(function (t) {
-      var n = (t.image.match(/(\d+)/) || [])[1];
-      return n && parseInt(n, 10) === skinIndex;
+  
+  // Helper function to find hand trait matching skin index
+  function findMatchingHand(pool, skinNum) {
+    if (!pool || pool.length === 0) return null;
+    return pool.find(function (t) {
+      if (!t || !t.image) return false;
+      // Extract number from path (e.g., "HANDS/3.PNG" or "HANDS2/15.PNG")
+      var match = t.image.match(/(\d+)\.PNG$/i) || t.image.match(/(\d+)/);
+      if (!match) return false;
+      var num = parseInt(match[1], 10);
+      return num === skinNum;
     });
-    if (handTrait) {
+  }
+  
+  // Hand 1 + Ball 1: Match skin number exactly
+  if (handCombo === 0 && skinIndex && skinIndex > 0 && skinTrait) {
+    var handPool = handList.length > 0 ? handList : allHands;
+    if (handPool.length === 0) {
+      var allHandRaw = TRAIT_DATA.hand || [];
+      handPool = allHandRaw.filter(function (t) { return t && t.image && !isBlankHand(t.image); });
+    }
+    var handTrait = findMatchingHand(handPool, skinIndex);
+    if (handTrait && handTrait.image) {
       selectTrait('hand', handTrait.image);
       var ballPool = ballList.length ? ballList : allBalls;
-      var ballTrait = pickRandomFrom(ballPool);
-      if (ballTrait) selectTrait('ball', ballTrait.image);
+      if (ballPool.length === 0) {
+        var allBallRaw = TRAIT_DATA.ball || [];
+        ballPool = allBallRaw.filter(function (t) { return t && t.image && !isBlankHand(t.image); });
+      }
+      if (ballPool.length > 0) {
+        var ballTrait = pickRandomFrom(ballPool);
+        if (ballTrait && ballTrait.image) {
+          selectTrait('ball', ballTrait.image);
+        }
+      }
     }
   }
-  // Hand 2 + Ball 2: ONLY match skin index (no fallback) - must have exact match
-  if (handCombo === 1 && skinIndex && skinTrait) {
-    // Build hand2 pool - use selected first, then all, ensure we get something
+  
+  // Hand 2 + Ball 2: Match skin number exactly (same logic as Hand 1)
+  if (handCombo === 1 && skinIndex && skinIndex > 0 && skinTrait) {
     var hand2Pool = hand2List.length > 0 ? hand2List : allHands2;
     if (hand2Pool.length === 0) {
-      // Last resort: get ALL hand2 traits from TRAIT_DATA
       var allHand2Raw = TRAIT_DATA.hand2 || [];
-      hand2Pool = allHand2Raw.filter(function (t) { 
-        return t && t.image && !isBlankHand(t.image); 
-      });
+      hand2Pool = allHand2Raw.filter(function (t) { return t && t.image && !isBlankHand(t.image); });
     }
-    // ONLY pick hand2 trait that matches skin index exactly (no fallback)
-    if (hand2Pool && hand2Pool.length > 0) {
-      var hand2Trait = hand2Pool.find(function (t) {
-        if (!t || !t.image) return false;
-        var n = (t.image.match(/(\d+)/) || [])[1];
-        return n && parseInt(n, 10) === skinIndex;
-      });
-      // Only proceed if we found an exact match
-      if (hand2Trait && hand2Trait.image) {
-        selectTrait('hand2', hand2Trait.image);
-        // Get ball2 pool
-        var ball2Pool = ball2List.length ? ball2List : allBalls2;
-        if (ball2Pool.length === 0) {
-          var allBall2Raw = TRAIT_DATA.ball2 || [];
-          ball2Pool = allBall2Raw.filter(function (t) { 
-            return t && t.image && !isBlankHand(t.image); 
-          });
-        }
-        if (ball2Pool && ball2Pool.length > 0) {
-          var ball2Trait = pickRandomFrom(ball2Pool);
-          if (ball2Trait && ball2Trait.image) {
-            selectTrait('ball2', ball2Trait.image);
-          }
+    var hand2Trait = findMatchingHand(hand2Pool, skinIndex);
+    if (hand2Trait && hand2Trait.image) {
+      selectTrait('hand2', hand2Trait.image);
+      var ball2Pool = ball2List.length ? ball2List : allBalls2;
+      if (ball2Pool.length === 0) {
+        var allBall2Raw = TRAIT_DATA.ball2 || [];
+        ball2Pool = allBall2Raw.filter(function (t) { return t && t.image && !isBlankHand(t.image); });
+      }
+      if (ball2Pool.length > 0) {
+        var ball2Trait = pickRandomFrom(ball2Pool);
+        if (ball2Trait && ball2Trait.image) {
+          selectTrait('ball2', ball2Trait.image);
         }
       }
     }
@@ -2133,23 +2143,10 @@ function randomizeCharacter() {
 
 function exportTraitList() {
   var slotOrder = ['background', 'backgroundblur', 'skin', 'eyes', 'mouth', 'hair', 'clothing', 'accessories', 'behindback', 'hat', 'goo', 'hand', 'hand2', 'ball', 'ball2'];
-  var sections = [];
   var dateStr = new Date().toLocaleDateString(undefined, { dateStyle: 'medium' });
-
-  sections.push('');
-  sections.push('  ★━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━★');
-  sections.push('');
-  sections.push('         🎨  L I T T L E   O L L I E  🎨');
-  sections.push('              Character Creator');
-  sections.push('');
-  sections.push('         My Selected Traits List!');
-  sections.push('         (these are in my randomizer)');
-  sections.push('');
-  sections.push('  ★━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━★');
-  sections.push('         Saved on: ' + dateStr);
-  sections.push('  ★━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━★');
-  sections.push('');
-
+  
+  // Collect all selected traits by category
+  var categories = [];
   slotOrder.forEach(function (slot) {
     var list = TRAIT_DATA[slot];
     if (!list) return;
@@ -2160,25 +2157,73 @@ function exportTraitList() {
       var path = t.image || '';
       return path.split('/').pop() || path.split('\\').pop() || path || t.name;
     });
-    sections.push('  ─── ' + categoryName + ' ───');
-    sections.push('     (' + selected.length + ' selected)');
-    sections.push('');
-    var chunk = 8;
-    for (var i = 0; i < filenames.length; i += chunk) {
-      sections.push('     ' + filenames.slice(i, i + chunk).join(', '));
-    }
-    sections.push('');
+    categories.push({ name: categoryName, count: selected.length, items: filenames });
   });
-
-  if (sections.length <= 10) {
-    sections.push('     No traits selected yet — check some boxes and try again!');
-    sections.push('');
+  
+  if (categories.length === 0) {
+    if (typeof alert === 'function') alert('NO TRAITS SELECTED — CHECK SOME BOXES AND TRY AGAIN!');
+    return;
   }
-  var text = sections.join('\n');
-  var blob = new Blob([text], { type: 'text/plain' });
+  
+  // Generate HTML
+  var html = '<!DOCTYPE html>\n<html lang="en">\n<head>\n';
+  html += '<meta charset="UTF-8">\n';
+  html += '<meta name="viewport" content="width=device-width, initial-scale=1.0">\n';
+  html += '<title>Little Ollie - Selected Traits</title>\n';
+  html += '<link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">\n';
+  html += '<style>\n';
+  html += '* { margin: 0; padding: 0; box-sizing: border-box; }\n';
+  html += 'body { font-family: \'Fredoka One\', cursive; background: linear-gradient(to right, #89f7fe, #66a6ff); min-height: 100vh; padding: 20px; color: #333; }\n';
+  html += '.container { max-width: 1200px; margin: 0 auto; background: rgba(255,255,255,0.95); border-radius: 20px; padding: 30px; box-shadow: 0 8px 32px rgba(0,0,0,0.2); }\n';
+  html += '.header { text-align: center; margin-bottom: 30px; padding-bottom: 20px; border-bottom: 3px solid #66a6ff; }\n';
+  html += '.header-logos { display: flex; align-items: center; justify-content: center; gap: 20px; margin-bottom: 15px; flex-wrap: wrap; }\n';
+  html += '.header-logos img { height: 120px; width: auto; object-fit: contain; }\n';
+  html += '.header h1 { font-size: 32px; color: #66a6ff; text-shadow: 2px 2px 4px rgba(0,0,0,0.1); margin-bottom: 10px; text-transform: uppercase; }\n';
+  html += '.header .subtitle { font-size: 18px; color: #555; margin-bottom: 10px; }\n';
+  html += '.header .date { font-size: 14px; color: #888; }\n';
+  html += '.traits-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 25px; margin-top: 30px; }\n';
+  html += '@media (max-width: 900px) { .traits-grid { grid-template-columns: repeat(2, 1fr); } }\n';
+  html += '@media (max-width: 600px) { .traits-grid { grid-template-columns: 1fr; } }\n';
+  html += '.category { background: linear-gradient(to bottom, #89f7fe, #66a6ff); border-radius: 15px; padding: 20px; box-shadow: 0 4px 12px rgba(0,0,0,0.15); }\n';
+  html += '.category-title { font-size: 20px; color: #fff; text-shadow: 1px 1px 2px rgba(0,0,0,0.2); margin-bottom: 12px; text-transform: uppercase; border-bottom: 2px solid rgba(255,255,255,0.3); padding-bottom: 8px; }\n';
+  html += '.category-count { font-size: 12px; color: rgba(255,255,255,0.9); margin-bottom: 15px; display: block; }\n';
+  html += '.items-list { display: flex; flex-wrap: wrap; gap: 8px; }\n';
+  html += '.item { background: rgba(255,255,255,0.95); padding: 6px 12px; border-radius: 8px; font-size: 11px; color: #333; box-shadow: 0 2px 4px rgba(0,0,0,0.1); text-transform: uppercase; }\n';
+  html += '</style>\n</head>\n<body>\n';
+  html += '<div class="container">\n';
+  html += '<div class="header">\n';
+  html += '<div class="header-logos">\n';
+  html += '<img src="websitelogo3.png" alt="Little Ollie Logo" onerror="this.style.display=\'none\'">\n';
+  html += '<img src="LO.png" alt="LO" onerror="this.style.display=\'none\'">\n';
+  html += '</div>\n';
+  html += '<h1>🎨 LITTLE OLLIE 🎨</h1>\n';
+  html += '<div class="subtitle">CHARACTER CREATOR</div>\n';
+  html += '<div class="subtitle">MY SELECTED TRAITS LIST</div>\n';
+  html += '<div class="date">(THESE ARE IN MY RANDOMIZER)</div>\n';
+  html += '<div class="date">SAVED ON: ' + dateStr + '</div>\n';
+  html += '</div>\n';
+  html += '<div class="traits-grid">\n';
+  
+  categories.forEach(function (cat) {
+    html += '<div class="category">\n';
+    html += '<div class="category-title">' + cat.name + '</div>\n';
+    html += '<span class="category-count">(' + cat.count + ' SELECTED)</span>\n';
+    html += '<div class="items-list">\n';
+    cat.items.forEach(function (item) {
+      html += '<span class="item">' + item + '</span>\n';
+    });
+    html += '</div>\n';
+    html += '</div>\n';
+  });
+  
+  html += '</div>\n';
+  html += '</div>\n';
+  html += '</body>\n</html>';
+  
+  var blob = new Blob([html], { type: 'text/html' });
   var url = URL.createObjectURL(blob);
   var a = document.createElement('a');
-  a.download = 'selected-traits.txt';
+  a.download = 'little-ollie-selected-traits.html';
   a.href = url;
   document.body.appendChild(a);
   a.click();
