--- a/index.html
+++ b/index.html
@@ -270,11 +270,28 @@ body {
   object-fit: contain;   /* prevents stretching on iPhone */
 }
 .trait-thumb-wrap.highlight-trait {
-  animation: highlightPulse 1s ease-in-out;
+  animation: highlightPulseRed 2s ease-in-out;
+  border: 3px solid #ff0000 !important;
+  box-shadow: 0 0 20px rgba(255, 0, 0, 0.8), 0 0 40px rgba(255, 0, 0, 0.6) !important;
+  z-index: 10;
+  position: relative;
+  box-sizing: border-box;
+  margin: 5px !important;
 }
-@keyframes highlightPulse {
-  0%, 100% { box-shadow: 0 0 0 0 rgba(52, 152, 219, 0); }
-  50% { box-shadow: 0 0 0 4px rgba(52, 152, 219, 0.6); }
+.trait-thumb-wrap.highlight-trait img {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
+@keyframes highlightPulseRed {
+  0%, 100% { 
+    box-shadow: 0 0 20px rgba(255, 0, 0, 0.8), 0 0 40px rgba(255, 0, 0, 0.6);
+    transform: scale(1);
+  }
+  50% { 
+    box-shadow: 0 0 30px rgba(255, 0, 0, 1), 0 0 60px rgba(255, 0, 0, 0.8);
+    transform: scale(1.05);
+  }
 }
 
 #traitPictures {
@@ -315,6 +332,10 @@ body {
     height: 80px;
     margin: 5px;
     flex-shrink: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
 }
 .trait-thumb-wrap img {
     margin: 0;
@@ -323,20 +344,23 @@ body {
     cursor: pointer;
     border: 2px solid transparent;
     display: block;
+    object-fit: contain;
+    box-sizing: border-box;
 }
 .trait-thumb-wrap img:hover {
     border: 2px solid #666;
 }
 .trait-thumb-wrap .trait-checkbox {
     position: absolute;
-    top: 2px;
-    right: 2px;
-    z-index: 2;
-    width: 18px;
-    height: 18px;
+    top: -6px;
+    right: -6px;
+    z-index: 3;
+    width: 20px;
+    height: 20px;
     cursor: pointer;
     margin: 0;
     accent-color: #3498db;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
 }
 .trait-options img {
     margin: 5px;
@@ -352,17 +376,19 @@ body {
 .trait-thumb-wrap:has(img.trait-deselected)::after {
     content: '';
     position: absolute;
-    inset: 0;
-    left: 2px;
-    right: 2px;
-    top: 2px;
-    bottom: 2px;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
     /* X centered at 50%: two diagonals through the middle */
     background: linear-gradient(135deg, transparent 45%, #c00 47%, #c00 53%, transparent 55%),
                 linear-gradient(45deg, transparent 45%, #c00 47%, #c00 53%, transparent 55%);
     border-radius: 4px;
     pointer-events: none;
     z-index: 1;
+    box-sizing: border-box;
 }
 .category-header {
     display: flex;
@@ -1281,6 +1307,9 @@ button:hover {
 <img src="GLASSES/23.PNG" alt="GLASSES" onclick="selectTrait('accessories', 'GLASSES/23.PNG')">
 <img src="GLASSES/24.PNG" alt="GLASSES" onclick="selectTrait('accessories', 'GLASSES/24.PNG')">
 <img src="GLASSES/25.PNG" alt="GLASSES" onclick="selectTrait('accessories', 'GLASSES/25.PNG')">
+<img src="GLASSES/26.PNG" alt="GLASSES" onclick="selectTrait('accessories', 'GLASSES/26.PNG')">
+<img src="GLASSES/27.PNG" alt="GLASSES" onclick="selectTrait('accessories', 'GLASSES/27.PNG')">
+<img src="GLASSES/28.PNG" alt="GLASSES" onclick="selectTrait('accessories', 'GLASSES/28.PNG')">
 
 
 
@@ -1428,6 +1457,9 @@ button:hover {
 <img src="HATS/123.PNG" alt="HATS" onclick="selectTrait('hat', 'HATS/123.PNG')">
 <img src="HATS/124.PNG" alt="HATS" onclick="selectTrait('hat', 'HATS/124.PNG')">
 <img src="HATS/125.PNG" alt="HATS" onclick="selectTrait('hat', 'HATS/125.PNG')">
+<img src="HATS/126.PNG" alt="HATS" onclick="selectTrait('hat', 'HATS/126.PNG')">
+<img src="HATS/127.PNG" alt="HATS" onclick="selectTrait('hat', 'HATS/127.PNG')">
+
 
 
 
@@ -1757,7 +1789,7 @@ function findAndHighlightTrait(slot, imagePath) {
       found.scrollIntoView({ behavior: 'smooth', block: 'center' });
       setTimeout(function () {
         found.classList.remove('highlight-trait');
-      }, 1000);
+      }, 9000); // Keep glowing for 9 seconds
     }
   }, 150);
 }
