--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>Little Ollie Character Creator</title>
 <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&family=Fredoka+One&display=swap" rel="stylesheet">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
 <style>
 
 :root {
@@ -88,7 +89,7 @@ body {
 #traitSelection {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, auto) auto auto;
+    grid-template-rows: repeat(4, auto) auto auto auto;
     gap: 4px 6px;
     justify-items: stretch;
     align-content: start;
@@ -172,7 +173,7 @@ body {
     opacity: 0.95;
 }
 #randomButton.randomize-button {
-    grid-row: 6;
+    grid-row: 5;
     grid-column: 1 / -1;
     background-color: #d35400;
     color: #fff;
@@ -185,7 +186,7 @@ body {
     opacity: 1;
 }
 #exportTraitListBtn.export-trait-button {
-    grid-row: 5;
+    grid-row: 6;
     grid-column: 1 / -1;
     background-color: #2c3e50;
     color: #fff;
@@ -197,6 +198,44 @@ body {
 #exportTraitListBtn.export-trait-button:hover {
     background-color: #1a252f;
     opacity: 1;
+}
+#exportSelectionBtn {
+    grid-row: 7;
+    grid-column: 1 / 3;
+    background-color: #16a085;
+    color: #fff;
+    padding: 6px 12px;
+    font-size: 12px;
+    font-weight: 700;
+    margin: 0;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+}
+#exportSelectionBtn:hover {
+    background-color: #138d75;
+    opacity: 1;
+}
+#importSelectionBtn {
+    grid-row: 7;
+    grid-column: 3 / -1;
+    background-color: #16a085;
+    color: #fff;
+    padding: 6px 12px;
+    font-size: 12px;
+    font-weight: 700;
+    margin: 0;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    display: inline-block;
+}
+#importSelectionBtn:hover {
+    background-color: #138d75;
+    opacity: 1;
+}
+#importSelectionBtn input[type="file"] {
+    display: none;
 }
 
 #characterDisplayContainer {
@@ -720,8 +759,13 @@ button:hover {
             <button class="category-button pair-hand1" data-category-id="ballCategory" data-label="BALLS 1" onclick="showCategory('ballCategory')">BALLS 1 (0)</button>
             <button class="category-button pair-hand2" data-category-id="hand2Category" data-label="HAND 2" onclick="showCategory('hand2Category')">HAND 2 (0)</button>
             <button class="category-button pair-hand2" data-category-id="ball2Category" data-label="BALLS 2" onclick="showCategory('ball2Category')">BALLS 2 (0)</button>
-            <button id="exportTraitListBtn" class="export-trait-button">EXPORT TRAIT LIST</button>
             <button id="randomButton" class="category-button randomize-button" onclick="randomizeCharacter()">RANDOMIZE</button>
+            <button id="exportTraitListBtn" class="export-trait-button">EXPORT TRAIT LIST</button>
+            <button id="exportSelectionBtn" onclick="exportSelectionState()">EXPORT SELECTION .JSON</button>
+            <label id="importSelectionBtn">
+                IMPORT SELECTION .JSON
+                <input type="file" accept=".json" onchange="if(this.files.length) importSelectionState(this.files[0]); this.value='';">
+            </label>
         </div>
         <div id="onCharacterList">
             <h4>WHAT&rsquo;S ON THIS CHARACTER</h4>
@@ -2249,6 +2293,80 @@ function randomizeCharacter() {
   // handCombo === 2 means no hand (33% chance)
 }
 
+function exportSelectionState() {
+  var exportData = {};
+
+  Object.keys(TRAIT_DATA).forEach(function (slot) {
+    exportData[slot] = TRAIT_DATA[slot].map(function (trait) {
+      return {
+        image: trait.image,
+        selected: !!trait.selected
+      };
+    });
+  });
+
+  var dataStr = JSON.stringify(exportData, null, 2);
+  var blob = new Blob([dataStr], { type: "application/json" });
+  var url = URL.createObjectURL(blob);
+
+  var a = document.createElement("a");
+  a.href = url;
+  a.download = "LO-trait-selection.json";
+  a.click();
+
+  URL.revokeObjectURL(url);
+}
+
+function importSelectionState(file) {
+  var reader = new FileReader();
+
+  reader.onload = function (e) {
+    try {
+      var importedData = JSON.parse(e.target.result);
+
+      Object.keys(importedData).forEach(function (slot) {
+        if (!TRAIT_DATA[slot]) return;
+
+        importedData[slot].forEach(function (importedTrait) {
+          var localTrait = TRAIT_DATA[slot].find(function (t) {
+            return t.image === importedTrait.image;
+          });
+
+          if (localTrait) {
+            localTrait.selected = !!importedTrait.selected;
+          }
+        });
+      });
+
+      refreshTraitUI();
+      if (typeof alert === 'function') alert("Selection loaded successfully.");
+
+    } catch (err) {
+      if (typeof alert === 'function') alert("Invalid selection file.");
+      console.error(err);
+    }
+  };
+
+  reader.readAsText(file);
+}
+
+function refreshTraitUI() {
+  Object.keys(TRAIT_DATA).forEach(function (slot) {
+    TRAIT_DATA[slot].forEach(function (trait) {
+      // Find image by matching data-src attribute
+      var images = document.querySelectorAll('img[data-src]');
+      for (var i = 0; i < images.length; i++) {
+        var img = images[i];
+        if (img.dataset.src === trait.image) {
+          setTraitSelected(img, trait.selected);
+          break;
+        }
+      }
+    });
+  });
+  updateAllCategoryCounters();
+}
+
 function exportTraitList() {
   var slotOrder = ['background', 'backgroundblur', 'skin', 'eyes', 'mouth', 'hair', 'clothing', 'accessories', 'behindback', 'hat', 'hoodies', 'goo', 'hand', 'hand2', 'ball', 'ball2'];
   var dateStr = new Date().toLocaleDateString(undefined, { dateStyle: 'medium' });
@@ -2328,15 +2446,102 @@ function exportTraitList() {
   html += '</div>\n';
   html += '</body>\n</html>';
   
-  var blob = new Blob([html], { type: 'text/html' });
-  var url = URL.createObjectURL(blob);
-  var a = document.createElement('a');
-  a.download = 'little-ollie-selected-traits.html';
-  a.href = url;
-  document.body.appendChild(a);
-  a.click();
-  a.remove();
-  URL.revokeObjectURL(url);
+  // Create a temporary container to render the HTML
+  var tempDiv = document.createElement('div');
+  tempDiv.style.position = 'absolute';
+  tempDiv.style.left = '-9999px';
+  tempDiv.style.width = '1200px';
+  tempDiv.innerHTML = html;
+  document.body.appendChild(tempDiv);
+  
+  // Wait for images to load, then generate PDF
+  var images = tempDiv.querySelectorAll('img');
+  var imagesToLoad = images.length;
+  var imagesLoaded = 0;
+  var pdfGenerated = false;
+  
+  // Timeout fallback (5 seconds)
+  var timeout = setTimeout(function() {
+    if (!pdfGenerated) {
+      pdfGenerated = true;
+      generatePDF();
+    }
+  }, 5000);
+  
+  function checkAndGenerate() {
+    if (!pdfGenerated && imagesLoaded === imagesToLoad) {
+      pdfGenerated = true;
+      clearTimeout(timeout);
+      generatePDF();
+    }
+  }
+  
+  if (imagesToLoad === 0) {
+    generatePDF();
+  } else {
+    images.forEach(function(img) {
+      if (img.complete) {
+        imagesLoaded++;
+        checkAndGenerate();
+      } else {
+        img.onload = function() {
+          imagesLoaded++;
+          checkAndGenerate();
+        };
+        img.onerror = function() {
+          imagesLoaded++;
+          checkAndGenerate();
+        };
+      }
+    });
+  }
+  
+  function generatePDF() {
+    if (typeof html2pdf === 'undefined') {
+      // Fallback to HTML if PDF library not loaded
+      var blob = new Blob([html], { type: 'text/html' });
+      var url = URL.createObjectURL(blob);
+      var a = document.createElement('a');
+      a.download = 'little-ollie-selected-traits.html';
+      a.href = url;
+      document.body.appendChild(a);
+      a.click();
+      a.remove();
+      URL.revokeObjectURL(url);
+      document.body.removeChild(tempDiv);
+      return;
+    }
+    
+    var element = tempDiv.querySelector('.container');
+    var opt = {
+      margin: 0.5,
+      filename: 'little-ollie-selected-traits.pdf',
+      image: { type: 'jpeg', quality: 0.98 },
+      html2canvas: { scale: 2, useCORS: true },
+      jsPDF: { unit: 'in', format: 'letter', orientation: 'portrait' }
+    };
+    
+    html2pdf().set(opt).from(element).save().then(function() {
+      if (tempDiv && tempDiv.parentNode) {
+        document.body.removeChild(tempDiv);
+      }
+    }).catch(function(err) {
+      console.error('PDF generation error:', err);
+      // Fallback to HTML
+      var blob = new Blob([html], { type: 'text/html' });
+      var url = URL.createObjectURL(blob);
+      var a = document.createElement('a');
+      a.download = 'little-ollie-selected-traits.html';
+      a.href = url;
+      document.body.appendChild(a);
+      a.click();
+      a.remove();
+      URL.revokeObjectURL(url);
+      if (tempDiv && tempDiv.parentNode) {
+        document.body.removeChild(tempDiv);
+      }
+    });
+  }
 }
 
 document.getElementById('exportTraitListBtn').addEventListener('click', exportTraitList);
