--- a/index.html
+++ b/index.html
@@ -1556,6 +1556,7 @@ button:hover {
 <img src="HATS/125.PNG" alt="HATS" onclick="selectTrait('hat', 'HATS/125.PNG')">
 <img src="HATS/126.PNG" alt="HATS" onclick="selectTrait('hat', 'HATS/126.PNG')">
 <img src="HATS/127.PNG" alt="HATS" onclick="selectTrait('hat', 'HATS/127.PNG')">
+<img src="HATS/128.PNG" alt="HATS" onclick="selectTrait('hat', 'HATS/128.PNG')">
 
 
 
