--- a/index.html
+++ b/index.html
@@ -1209,6 +1209,11 @@ button:hover {
 <img src="HAIR/78.PNG" alt="Hair" onclick="selectTrait('hair', 'HAIR/78.PNG')">
 <img src="HAIR/79.PNG" alt="Hair" onclick="selectTrait('hair', 'HAIR/79.PNG')">
 <img src="HAIR/80.PNG" alt="Hair" onclick="selectTrait('hair', 'HAIR/80.PNG')">
+<img src="HAIR/81.PNG" alt="Hair" onclick="selectTrait('hair', 'HAIR/81.PNG')">
+<img src="HAIR/82.PNG" alt="Hair" onclick="selectTrait('hair', 'HAIR/82.PNG')">
+<img src="HAIR/83.PNG" alt="Hair" onclick="selectTrait('hair', 'HAIR/83.PNG')">
+<img src="HAIR/84.PNG" alt="Hair" onclick="selectTrait('hair', 'HAIR/84.PNG')">
+<img src="HAIR/85.PNG" alt="Hair" onclick="selectTrait('hair', 'HAIR/85.PNG')">
 <img src="HAIR/100.PNG" alt="Hair" onclick="selectTrait('hair', 'HAIR/100.PNG')">
 
 
